--- a/src/comonents/login/Login.css
+++ b/src/comonents/login/Login.css
@@ -13,6 +13,7 @@
     font-size: 40px;
     width: 100%;
     line-height: 50px;
+    text-transform: capitalize;
     font-family: var(--styledFont);
     margin-bottom: 30px;
 }
@@ -28,7 +29,10 @@
     position: relative;
 }
 .img{
-    border-radius: 5px;   
+    border-radius: 5px;
+    width:400px;
+    height:500px;
+    background-size: cover;  
 }
 .banner_left>div{
     position: absolute;
@@ -174,5 +178,40 @@
 .sign_up{
     top: 45px !important;
     padding: 20px !important;
+}
+
+@media screen and (max-width: 762px) {
+    .banner{
+        flex-direction: column-reverse;
+        gap: 50px;
+        padding: 0px 0px 50px;
+    }
+    .banner_right{
+        width: 100%;
+        padding: 0px 20px;
+    }
+    .banner_right>h1{
+        font-size: 25px;
+        line-height: 35px;
+    }
+    .banner_right>p{
+        font-size: 15px;
+    }
+    .img{
+        width: 100%;
+        /* height: 400px; */
+    }
+    .banner_left{
+        width: 100%;
+        margin-left: 0;
+    }
+    .banner_left>div{
+        left: 20px;
+        top: 90px;
+        width: 330px;  
+    }
+    .sign_up{
+        top: 95px !important
+    }
 }
 
